--- a/src/scss/modules/_single-product.scss
+++ b/src/scss/modules/_single-product.scss
@@ -40,9 +40,7 @@
                     transform: rotate(180deg);  
                     
                 }
-                &-plus {
-                    
-                }
+
                 &-input {
                     width: 50px;
                     text-align: center;
