--- a/src/scss/modules/general/_media.scss
+++ b/src/scss/modules/general/_media.scss
@@ -112,6 +112,7 @@
         }
     }
     .specifications {
+        width: 100%;
         &__name {
             font-size: rem(25);
         }
